App2/src/objects/Seat__c.object
<CustomObject>
    <fields>
        <fullName>Carriage__c</fullName>
        <label>Carriage</label>
        <referenceTo>Carriage__c</referenceTo>
        <relationshipLabel>Seats</relationshipLabel>
        <relationshipName>Seats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_Table__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Window</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Near_Window__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Near Window</label>
        <type>Checkbox</type>
    </fields>
    <label>Seat</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>